manifests-ocp/webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: validate.infra-webhooks.svc
webhooks:
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURtekNDQW9PZ0F3SUJBZ0lVR1pWa2Y3aUpEUTN3VGp0MHFYZ2t2azBVMWg0d0RRWUpLb1pJaHZjTkFRRUwKQlFBd1hURUxNQWtHQTFVRUJoTUNWVk14RlRBVEJnTlZCQWNNREVSbFptRjFiSFFnUTJsMGVURWNNQm9HQTFVRQpDZ3dUUkdWbVlYVnNkQ0JEYjIxd1lXNTVJRXgwWkRFWk1CY0dBMVVFQXd3UWQyVmlhRzl2YXkxMFpYTjBMbk4yCll6QWVGdzB5TVRFeU1UVXlNRE00TkRoYUZ3MHlNakF4TVRReU1ETTRORGhhTUYweEN6QUpCZ05WQkFZVEFsVlQKTVJVd0V3WURWUVFIREF4RVpXWmhkV3gwSUVOcGRIa3hIREFhQmdOVkJBb01FMFJsWm1GMWJIUWdRMjl0Y0dGdQplU0JNZEdReEdUQV [...]
    service:
      name: validate
      namespace: infra-webhooks
      path: /validate/
      port: 8443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: validate.infra-webhooks.svc
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - '*'
    apiVersions:
    - '*'
    operations:
    - DELETE
    resources:
    - projects
    - namespaces
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
